# brewfest

./: .dockerignore  .env  .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json  styles.ts  tsconfig.json
api/: .env  .gitignore  .mise.toml  Cargo.toml  Dockerfile  FCM_IMPLEMENTATION_GUIDE.md  brewfest_schema.sql  docker-compose.yml  fly.toml  package-lock.json  seed.sql
api/.cargo/: config.toml
api/docs/: API_DESIGN.md  S3_LOCALSTACK_QUICKSTART.md  S3_LOCAL_DEVELOPMENT.md  TODO.md
api/entities/: Cargo.toml
api/entities/src/: account.rs  accounts.rs  device_token.rs  event.rs  event_subscription.rs  events.rs  lib.rs  mod.rs  notification.rs  notification_delivery.rs  prelude.rs  schedule_image.rs  schedule_images.rs  schedule_item.rs  schedule_items.rs  vendor.rs  vendor_image.rs  vendor_images.rs  vendor_inventory_item.rs  vendor_inventory_items.rs  vendors.rs
api/entities/src/extensions/: mod.rs  schedule_image_ext.rs  timestamps.rs  vendor_image_ext.rs  vendor_inventory_item_ext.rs
api/images/: Cargo.toml
api/images/src/: config.rs  lib.rs  s3.rs
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20220101_000001_create_vendors.rs  m20240415_020214_create_schedule_items.rs  m20240415_223417_create_events.rs  m20240415_233255_create_accounts.rs  m20240415_233815_add_reference_from_vendors_to_events.rs  m20240603_203915_create_schedule_images.rs  m20240704_151504_add_location_to_vendors.rs  m20240713_154501_add_event_reference_to_schedule.rs  m20241020_233000_add_image_to_events.rs  m20241209_205735_add_category_to_vendor.rs  m20241209_211320_add_image_to_vendors.rs  m20241210_005959_add_image_to_schedule_item.rs  m20241217_141437_create_vendor_images.rs  m20241222_232955_add_thumbnail_column_to_event_items.rs  m20241222_232955_add_thumbnail_column_to_images.rs  m20241225_040709_add_thumbnail_column_to_events.rs  m20241225_200857_operating_out_of_to_vendor.rs  m20241225_201805_add_missing_vendor_fields.rs  m20241227_163654_create_vendor_inventory.rs  m20241231_223437_add_coordinates_to_event.rs  m20250113_003852_add_type_to_vendor.rs  m20250118_034811_add_event_id_to_inventory_item.rs  m20251202_214900_rename_tables_to_singular.rs  m20251202_235545_create_location_table.rs  m20251206_035118_add_location_attributes_to_event.rs  m20251206_155509_add_vendor_fields.rs  m20251212_023114_add_subcat_to_inventory_item.rs  m20251215_010039_rename_subcategory_to_inventory_item_type.rs  m20251221_160401_create_device_token_table.rs  m20251221_160431_create_notification_table.rs  m20251221_160458_create_notification_delivery_table.rs  m20251230_144835_create_event_subscription_table.rs  main.rs  migrator_extended.rs
api/migration/src/seeds/: accounts.rs  events.rs  mod.rs  vendor_inventory.rs  vendors.rs
api/notifications/: Cargo.toml
api/notifications/src/: lib.rs  service.rs
api/scripts/: reset-database.sql  setup-localstack.sh
api/src/: main.rs
api/tests/: schedule.rs  vendors.rs
api/web/: Cargo.toml
api/web/examples/: quick_dev.rs
api/web/src/: config.rs  lib.rs  schedule.rs  vendors.rs
api/web/src/auth/: mod.rs
api/web/src/common/: events.rs  images.rs  mod.rs
api/web/src/handlers/: mod.rs  response.rs
api/web/src/handlers/device_tokens/: mod.rs
api/web/src/handlers/events/: mod.rs  thumbnail.rs
api/web/src/handlers/schedule/: .image.rs.rustfmt  image.rs  mod.rs  schedule.rs
api/web/src/presenters/: types.rs
api/web/src/presenters/events/: index.rs  mod.rs  presenter.rs
api/web/src/routers/: device_tokens.rs  mod.rs
api/web/src/routers/events/: mod.rs  schedule.rs  vendors.rs
api/web/src/utils/: mod.rs  s3_uploader.rs  s3_url.rs  test_app.rs
api/web/tests/: event.rs
api/web/tests/common/: mod.rs  test_app.rs
(+224 files in other folders)
