[package]
name = "entities"
version = "0.1.0"
edition = "2021"

[lib]
name = "entities"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["postgres", "uuid", "time"] }
chrono = { version = "0.4", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive"] }
tracing = "0.1.40"
