[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "sqlx-sqlite"] }
entities = { path = "../entities" }
tracing = "0.1.40"

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-tokio-native-tls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]

[features]
dev = []
