[package]
name = "notifications"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
entities = { path = "../entities" }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "sqlx-sqlite"] }
fcm-service = "0.2.3"
serde = "1.0.228"
tokio = "1.48.0"
tracing = "0.1.44"
serde_json = "1.0.148"
chrono = "0.4.42"

[lib]
path = "src/lib.rs"
