[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../migration" }
entities = { path = "../entities" }
images = { path = "../images" }

axum = { version= "0.7.4", features = ["macros", "multipart"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
dotenv = "0.15.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
anyhow = "1"
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.203"
serde_json = "1.0.117"
chrono = "0.4.38"
aws-sdk-s3 = { version = "1.32.0", features = ["behavior-version-latest"] }
aws-config = "1.5.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
httpc-test = "0.1"
once_cell = "1.20.2"
reqwest = "0.12.9"
testcontainers = "0.23.1"

[lib]
path = "src/lib.rs"
proc-macro = false
